# mLLM

./: CMakeLists.txt  README.md
cmake/: CudaDependencies.cmake
demo/: CMakeLists.txt  qwen3_chat.cpp  token_speed_cal.cpp
docs/: cuda-library-operator-rollout.md
docs/superpowers/plans/: 2026-04-07-unified-bf16-inference-foundation-phase-1.md
include/base/: allocator.h  buffer.h  common.h  cuda_library_context.h  cuda_library_error.h  dtype.h  safetensors.h  tensor.h  util.h
include/kernel/: embedding_kernel.h  kernel.h
include/kernel/cpu/: add_kernel.h  causal_mask_kernel.h  contiguous_kernel.h  ele_mul_kernel.h  embedding_kernel.h  gen_rope_kernel.h  last_hidden_state_kernel.h  mat_add_kernel.h  mat_mul_kernel.h  random_sampling_kernel.h  rms_norm_kernel.h  rope_kernel.h  silu_kernel.h  softmax_kernel.h
include/kernel/cuda/: add_kernel.cuh  causal_mask_kernel.cuh  contiguous_kernel.cuh  ele_mul_kernel.cuh  embedding_kernel.cuh  gemm_kernel.cuh  gen_rope_kernel.cuh  last_hidden_state_kernel.cuh  mat_add_kernel.cuh  mat_mul_backend_selector.h  mat_mul_kernel.cuh  random_sampling_kernel.cuh  rms_norm_kernel.cuh  rope_kernel.cuh  silu_kernel.cuh  softmax_backend_selector.h  softmax_kernel.cuh
include/model/: qwen3.h  qwen3_decode_layer.h  qwen3_mlp.h  qwen3_rotary_embedding.h  qwen3_self_attn.h
include/op/: add.h  causal_mask.h  ele_mul.h  embedding.h  layer.h  linear.h  mat_mul.h  rms_norm.h  silu.h  softmax.h
include/tokenizer/: tokenizer.h
openspec/changes/library-first-cuda-backend/: design.md  proposal.md  tasks.md
openspec/changes/library-first-cuda-backend/specs/cuda-library-dispatch/: spec.md
openspec/changes/library-first-cuda-backend/specs/cuda-library-integration/: spec.md
openspec/changes/qwen3-8b-support/: design.md  proposal.md  tasks.md
openspec/changes/qwen3-8b-support/specs/qwen3-8b-cpu-inference/: spec.md
openspec/changes/qwen3-8b-support/specs/qwen3-sharded-checkpoint-loading/: spec.md
openspec/changes/unified-bf16-inference-foundation/: design.md  proposal.md  tasks.md
openspec/changes/unified-bf16-inference-foundation/specs/bf16-qwen3-inference/: spec.md
openspec/changes/unified-bf16-inference-foundation/specs/typed-tensor-runtime/: spec.md
scripts/: cut_safetensor.py  plot_gemm_performance.py  plot_token_speed.py  print_weight.py  save_incremental_outputs.py  save_layer_outputs.py
src/: CMakeLists.txt  tokenizer.hpp
src/base/: allocator.cpp  buffer.cpp  common.cpp  cuda_library_context.cpp  safetensors.cpp  tensor.cpp  util.cpp
src/kernel/: embedding_kernel.cpp  kernel.cpp
src/kernel/cpu/: add_kernel.cpp  causal_mask_kernel.cpp  contiguous_kernel.cpp  ele_mul_kernel.cpp  embedding_kernel.cpp  gen_rope_kernel.cpp  last_hidden_state_kernel.cpp  mat_add_kernel.cpp  mat_mul_kernel.cpp  random_sampling_kernel.cpp  rms_norm_kernel.cpp  rope_kernel.cpp  silu_kernel.cpp  softmax_kernel.cpp
src/kernel/cuda/: add_kernel.cu  causal_mask_kernel.cu  contiguous_kernel.cu  ele_mul_kernel.cu  embedding_kernel.cu  gemm_kernel.cu  gen_rope_kernel.cu  last_hidden_state_kernel.cu  mat_add_kernel.cu  mat_mul_backend_selector.cpp  mat_mul_kernel.cu  my_gemm_kernel.cu  random_sampling_kernel.cu  rms_norm_kernel.cu  rope_kernel.cu  silu_kernel.cu  softmax_backend_selector.cpp  softmax_kernel.cu
src/model/: qwen3.cpp  qwen3_decode_layer.cpp  qwen3_mlp.cpp  qwen3_rotary_embedding.cpp  qwen3_self_attn.cpp
src/op/: add.cpp  causal_mask.cpp  ele_mul.cpp  embedding.cpp  layer.cpp  linear.cpp  mat_mul.cpp  rms_norm.cpp  silu.cpp  softmax.cpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
test/: CMakeLists.txt  add_kernel_test.cpp  allocator_test.cpp  buffer_test.cpp  causal_mask_kernel_test.cpp  cuda_library_context_test.cpp  emb_kernel_test.cpp  gemm_eval.cu  gen_rope_kernel_test.cpp  mat_add_kernel_test.cpp  mat_mul_kernel_test.cpp  print_layer_weight.cpp  qwen3_check.hpp  qwen3_cpu_cuda_check.cpp  qwen3_hook_check.cpp  qwen3_incremental_check.cpp  qwen3_test.cpp  rms_nrom_kernel_test.cpp  rope_kernel_test.cpp  safetensors_test.cpp  silu_kernel_test.cpp  simple_emb_test.cpp  softmax_kernel_test.cpp  tensor_cat_test.cpp  tensor_test.cpp  tokenizer_test.cpp
